syntax = "proto3";
package protobuf;
option go_package = "github.com/sath-run/engine/engine/core/protobuf";

enum EnumExecStatus {
  EES_UNSPECIFIED = 0;
	EES_DEFAULT = 100;
  EES_DOWNLOADING_INPUTS = 200;
  EES_PROCESSING_INPUTS = 300;
  EES_WAITING = 400;
	EES_PULLING_IMAGE = 500;
  EES_INIT_CONTAINER = 600;
  EES_RUNNING = 700;
  EES_PROCESSING_OUPUTS = 800;
	EES_SUCCESS = 900;
	EES_CANCELED = 1000;
	EES_ERROR = 1100;
  EES_PAUSED = 1200;
}

message JobGetRequest {
}

enum GpuOpt {
  EGO_None = 0;
  EGO_PREFERRED = 10;
  EGO_REQUIRED = 100;
}

enum GpuModel {
  EGM_All = 0;
  EGM_NVIDIA = 1;
  EGM_AMD = 2;
}

message GpuConf {
  GpuOpt opt = 1;
  uint64 vram = 2;
  repeated GpuModel model = 3;
}

message JobGetResponse {
  string project_id = 1;
  string job_id = 2;
  string exec_id = 3;
  Image image = 4;
  GpuConf gpuConf = 5;
  Volume volume = 6;
  repeated string cmd = 7;
  repeated JobInput inputs = 8;
  repeated JobOutput outputs = 9;
}

message Volume {
  string data = 1;
  string source = 2;
  string output = 3;
}

message FileRequest {
  string url = 1;
  string method = 2;
  repeated RequestHeader headers = 3;
}

message RequestHeader {
  string name = 1;
  string value = 2;
}

message JobInput {
  string path = 1;
  FileRequest req = 2;
  uint64 size = 3;
  bytes content = 4;
  string configs = 5;
}

message JobOutput {
  string id = 1;
  string path = 2;
  FileRequest req = 3;
  string configs = 4;
}

message Image {
  string url = 1;
  string auth = 2;
}

message ExecNotificationRequest {
  EnumExecStatus status = 1;
  string message = 2;
  double progress = 3;
  repeated GpuStats gpu_stats = 4;
  repeated ExecOutput outputs = 5;
}

enum ExecOutputStatus {
  EOS_UNSPECIFIED = 0;
  EOS_SUCCESS = 10;
  EOS_ERROR = 20;
}

message ExecOutput {
  string id = 1;
  ExecOutputStatus status = 2;
  string message = 3;
  bytes content = 4;
}

message ExecNotificationResponse {

}

message GpuStats {
  int32 id = 1;
}